fix home page, event and discussion page

--- a/src/app/components/card-event/card-event.component.html
+++ b/src/app/components/card-event/card-event.component.html
@@ -10,8 +10,8 @@
       <div class="day">{{ getDayLabel() }}</div>
     </div>
     <div class="info">
-      <h3>{{ event.title }}</h3>
-      <p>{{ event.description }}</p>
+      <h3 class="title">{{ event.title }}</h3>
+      <p class="desc">{{ event.description }}</p>
     </div>
   </mat-card-content>
 </mat-card>
