--- a/src/app/pages/user/event-room-page/event-room-page.component.html
+++ b/src/app/pages/user/event-room-page/event-room-page.component.html
@@ -2,7 +2,10 @@
 <div class="page-wrapper">
   <div class="toolbar">
     <div class="toolbar-left">
-      <h2>⭐ Event</h2>
+      <button mat-icon-button (click)="goBack()" class="back-button" matTooltip="Back">
+        <mat-icon fontIcon="chevron_left"></mat-icon>
+      </button>
+      <h2>Event</h2>
       <div class="chip-row">
         <mat-chip *ngFor="let tag of availableTags"
                   (click)="filterByTag(tag)"
