--- a/src/app/components/card-event/card-event.component.scss
+++ b/src/app/components/card-event/card-event.component.scss
@@ -67,7 +67,7 @@ mat-card-image {
 }
 
 .title {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 600;
   color: #1a237e;
   margin-bottom: 4px;
@@ -78,11 +78,13 @@ mat-card-image {
 
 .desc {
   font-size: 12px;
-  color: #666;
-  line-height: 1.4;
+  color: #555;
+  line-height: 1.3;
+  height: 2.6em; /* 2 dòng × line-height 1.3 */
+  overflow: hidden;
+  text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
+
