--- a/src/app/pages/user/card-room-page/card-room-page.component.html
+++ b/src/app/pages/user/card-room-page/card-room-page.component.html
@@ -1,7 +1,10 @@
 <div class="page-wrapper">
   <div class="toolbar">
     <div class="toolbar-left">
-      <h2>⭐ Discussion</h2>
+        <button mat-icon-button (click)="goBack()" class="back-button" matTooltip="Back">
+          <mat-icon fontIcon="chevron_left"></mat-icon>
+        </button>
+        <h2>Discussion</h2>
       <div class="chip-row">
         <mat-chip *ngFor="let label of availableLabels"
                   (click)="filterByLabel(label)"
