--- a/src/app/pages/user/room-chat-page/room-chat-page.component.css
+++ b/src/app/pages/user/room-chat-page/room-chat-page.component.css
@@ -342,3 +342,14 @@
   background-color: #757575;
   color: white;
 }
+
+.chat-input-wrapper {
+  position: relative;
+}
+
+.emoji-wrapper {
+  position: absolute;
+  bottom: 56px; /* height of chat input + spacing */
+  left: 0;
+  z-index: 100;
+}
