--- a/src/app/pages/user/profile-page/profile-page.component.html
+++ b/src/app/pages/user/profile-page/profile-page.component.html
@@ -26,7 +26,7 @@
         <mat-icon class="search-icon">search</mat-icon>
         <input class="search-input" [(ngModel)]="eventSearch" placeholder="Search event..." />
       </div>
-      <button mat-button class="see-more-btn">See more</button>
+      <button mat-button class="see-more-btn" (click)="goToEventPage()">See more</button>
     </div>
   </div>
 
@@ -55,9 +55,9 @@
     <div class="section-actions">
       <div class="custom-search">
         <mat-icon class="search-icon">search</mat-icon>
-        <input class="search-input" [(ngModel)]="roomSearch" placeholder="Search room..." />
+        <input class="search-input" [(ngModel)]="roomSearch" placeholder="Search discussions..." />
       </div>
-      <button mat-button class="see-more-btn">See more</button>
+      <button mat-button class="see-more-btn" (click)="goToRoomPage()">See more</button>
     </div>
   </div>
 
