MFS-ImBackto-back

--- a/src/app/pages/user/card-room-page/card-room-page.component.html
+++ b/src/app/pages/user/card-room-page/card-room-page.component.html
@@ -1,8 +1,8 @@
 <div class="page-wrapper">
   <div class="toolbar">
     <div class="toolbar-left">
-      <button mat-icon-button (click)="goHome()" matTooltip="Back to Home">
-        <mat-icon>arrow_back</mat-icon>
+      <button mat-icon-button (click)="goBack()" class="back-button" matTooltip="Back">
+        <mat-icon fontIcon="chevron_left"></mat-icon>
       </button>
       <h2>Discussion</h2>
       <div class="chip-row">
