--- a/src/app/pages/admin/admin-page/components/topbar/topbar.component.html
+++ b/src/app/pages/admin/admin-page/components/topbar/topbar.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="onMenuClick()">
       <mat-icon>menu</mat-icon>
     </button>
-    <h1 class="brand">NEWWORD</h1>
+    <h1 class="brand" (click)="goToAdmin()" style="cursor: pointer;">NEWWORD</h1>
   </div>
 
 
