--- a/src/app/components/topbar/topbar.component.css
+++ b/src/app/components/topbar/topbar.component.css
@@ -60,5 +60,7 @@ button notification {
   width: 300px;
   background-color: white;
   border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+
