--- a/src/app/dialog/create-room/create-room.component.css
+++ b/src/app/dialog/create-room/create-room.component.css
@@ -29,17 +29,17 @@
     .upload-title {
       font-weight: 500;
       margin: 0;
-      color: #2e7d32; // text xanh đậm
+      color: #2e7d32;
     }
     button[mat-icon-button]{
-      background-color: #a5d6a7; // nút xanh nhạt
-      color: #2e7d32; // icon xanh đậm
+      background-color: #a5d6a7;
+      color: #2e7d32;
       border-radius: 50%;
       padding: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); // bóng nhẹ
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
     button[mat-icon-button]:hover {
-      background-color: #81c784; // nút xanh đậm
+      background-color: #81c784;
       color: #fff;
     }
     button[mat-icon-button]:hover mat-icon {
