--- a/src/app/pages/admin/management-profile/management-profile.component.html
+++ b/src/app/pages/admin/management-profile/management-profile.component.html
@@ -72,7 +72,7 @@
     [length]="filteredData.length"
     [pageSize]="pageSize"
     [pageIndex]="currentPageIndex"
-    [pageSizeOptions]="[1, 3, 5]"
+    [pageSizeOptions]="[5, 10, 25, 50]"
     (page)="onPageEvent($event)">
   </mat-paginator>
 </div>
