--- a/src/app/components/card-event/card-event.component.html
+++ b/src/app/components/card-event/card-event.component.html
@@ -1,17 +1,27 @@
-<mat-card class="card-container" (click)="openDialog()" style="cursor: pointer;">
+<mat-card
+  class="card-container"
+  [ngClass]="{ 'card-inactive': event.is_hidden }"
+  (click)="openDialog()"
+  style="cursor: pointer;"
+>
   <div class="image-wrapper">
     <img mat-card-image [src]="safeImageUrl" alt="Event Image" />
   </div>
-
 
   <mat-card-content class="content">
     <div class="date">
       <div class="month">{{ getMonthLabel() }}</div>
       <div class="day">{{ getDayLabel() }}</div>
     </div>
+
     <div class="info">
       <h3 class="title">{{ event.title }}</h3>
       <p class="desc">{{ event.description }}</p>
+
+      <!-- Hiển thị nếu bị ẩn -->
+      @if (event.is_hidden) {
+        <div class="hidden-label">Hidden Event</div>
+      }
     </div>
   </mat-card-content>
 </mat-card>
