--- a/src/app/components/card-event/card-event.component.scss
+++ b/src/app/components/card-event/card-event.component.scss
@@ -88,3 +88,14 @@ mat-card-image {
   -webkit-box-orient: vertical;
 }
 
+.card-inactive {
+  opacity: 0.4;
+}
+
+.hidden-label {
+  font-size: 12px;
+  font-weight: 600;
+  color: #CD5656;
+  margin-top: 4px;
+  font-style: italic;
+}
